<resources>
    <string name="app_name">AndroidHems</string>
    <string name="logo">HEMS</string>
    <string name="find_devices">Find Devices</string>
    <string name="demonstration">Demonstration</string>
    <string name="status">Status:</string>
    <string name="mode">Mode:</string>
    <string name="instantan">Instantaneous:</string>
    <string name="total">Total:</string>
    <string name="not_found">Could not found any device.</string>
    <string name="refresh">Refresh</string>
    <string name="instantan_input">Instantaneous Value</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="button_set">SET</string>
    <string name="start_time_picker">Start Time</string>
    <string name="end_time_picker">End Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instantan_not_null">Instantaneous value can not be null!</string>
    <string name="time_not_null">Start time and End time can not be empty!</string>
    <string name="msg_set_status_failed">Set Status Failed!</string>
    <string name="msg_set_status_success">Set Status Successful!</string>
    <string name="msg_set_mode_success">Set Mode Successful!</string>
    <string name="msg_set_mode_failed">Set Mode Failed!</string>
    <string name="msg_set_schedule_success">Set Schedule Successful!</string>
    <string name="msg_set_schedule_failed">Set Schedule Failed!</string>

</resources>
