<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigDevice">
    <GridLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:background="@color/ev_background"
        android:id="@+id/device_layout">
        <ImageView
            android:id="@+id/device_image"
            android:layout_height="140dp"
            android:layout_width="140dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:padding="8dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:layout_columnWeight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/status"
                android:textSize="@dimen/device_text"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:textColor="@color/electric_value"
                android:textSize="@dimen/device_value"
                android:textStyle="bold"
                android:gravity="end"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/mode_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/mode"
                android:textSize="@dimen/device_text"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/mode_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/device_value"
                android:textStyle="bold"
                android:textColor="@color/electric_value"
                android:gravity="end"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/instantan_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/instantan"
                android:textSize="@dimen/device_text"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/instantan_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_columnWeight="1"
                android:textSize="@dimen/device_value"
                android:textStyle="bold"
                android:textColor="@color/electric_value"
                android:gravity="end"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/total_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/total"
                android:textSize="@dimen/device_text"
                android:textAlignment="center"/>


            <TextView
                android:id="@+id/total_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_columnWeight="1"
                android:textSize="@dimen/device_value"
                android:textStyle="bold"
                android:textColor="@color/electric_value"
                android:gravity="end"
                android:textAlignment="center"/>
        </LinearLayout>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/status_btn_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/textColorPrimary"
                android:onClick="onClickStatusOn"/>
            <Button
                android:id="@+id/status_btn_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:layout_alignParentStart="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@color/device_bg"
                android:textColor="@color/navigationBarColor"
                android:onClick="onClickStatusOff"/>
        </RelativeLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:inputType="number"
            android:maxLength="9"
            android:hint="@string/instantan_input"/>
    </LinearLayout>


</LinearLayout>